# fast_food_server

./: .env  .gitignore  Cargo.toml  README.md
src/: cart.rs  main.rs  menu.rs  order.rs  types.rs
src/auth/: login.rs  signup.rs
