[package]
name = "fast_food_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "uuid",
    "macros",
] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
